Set fixed width for cells in all tables Add padding to first, last cells in all tables Fix align in HeaderCell

--- a/src/components/Table/views/TableView/TableView.module.less
+++ b/src/components/Table/views/TableView/TableView.module.less
@@ -32,7 +32,7 @@
         white-space: nowrap;
         vertical-align: middle;
 
-        &::first-child {
+        &:first-child {
           padding-left: 24px;
           text-align: left;
 
@@ -67,7 +67,7 @@
         font: var(--body-text-md);
         vertical-align: middle;
 
-        &::first-child {
+        &:first-child {
           padding-left: 24px;
           text-align: left;
 
@@ -76,7 +76,7 @@
           }
         }
 
-        &::last-child {
+        &:last-child {
           padding-right: 24px;
 
           @media (max-width: 640px) {
