--- a/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
+++ b/src/pages/BorrowPage/components/BorrowTable/BorrowTable.module.less
@@ -6,16 +6,16 @@
   overflow: hidden;
 }
 
-.borrowTable {
-  table {
-    tr {
-      th,
-      td {
-        width: 285px;
-      }
+.borrowTable table {
+  tr {
+    th,
+    td {
+      min-width: 220px;
+      max-width: 220px;
 
       &:last-child {
-        width: 144px;
+        min-width: 120px;
+        max-width: 120px;
       }
     }
   }
